src/test/ui/compile-fail-migration/should-fail-with_gate_irrefutable_pattern_deny.stderr
error: irrefutable if-let pattern
  --> $DIR/should-fail-with_gate_irrefutable_pattern_deny.rs:15:5
   |
LL |     if let _ = 5 {}
   |     ^^^^^^^^^^^^^^^
   |
   = note: #[deny(irrefutable_let_patterns)] on by default

error: aborting due to previous error

